# cpp-docker-base

./: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
config/: config.yml
data/: config.json
